# opencl-example

./: .gitignore  CMakeLists.txt  README.md  example.cl  main.c
